# istinit

./: .dockerignore  Cargo.toml  Makefile.toml  README.md  shell.nix
.github/workflows/: build.yaml
containers/: Dockerfile
nix/: sources.json
src/: error.rs  istio.rs  lib.rs
tests/: istio.rs
