[package]
name = "istinit"
version = "0.0.1"
authors = ["FST Network <tech@fstk.io>"]
edition = "2018"
autobins = false

[lib]
name = "istinit"
path = "src/lib.rs"

[[bin]]
doc = false
name = "istinit"
path = "src/bin/main.rs"

[dependencies]
snafu = "0.6"
structopt = "0.3"
lazy_static = "1.4"

async-trait = "0.1"
futures = "0.3"
tokio = { version = "0.3", features = ["process", "rt", "rt-multi-thread", "time"] }
tokio-compat-02 = "0.1"

hyper = "0.13"

tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

serde = "1"
serde_json = "1"
